@@ -10,6 +10,21 @@ describe ExternalIssue, models: true do
     it { is_expected.to include_module(Referable) }
   end
 
+  describe '.reference_pattern' do
+    it 'allows underscores in the project name' do
+      expect(ExternalIssue.reference_pattern.match('EXT_EXT-1234')[0]).to eq 'EXT_EXT-1234'
+    end
+
+    it 'allows numbers in the project name' do
+      expect(ExternalIssue.reference_pattern.match('EXT3_EXT-1234')[0]).to eq 'EXT3_EXT-1234'
+    end
+
+    it 'requires the project name to begin with A-Z' do
+      expect(ExternalIssue.reference_pattern.match('3EXT_EXT-1234')).to eq nil
+      expect(ExternalIssue.reference_pattern.match('EXT_EXT-1234')[0]).to eq 'EXT_EXT-1234'
+    end
+  end
+
   describe '#to_reference' do
     it 'returns a String reference to the object' do
       expect(issue.to_reference).to eq issue.id
